Correction IE et password

--- a/ui/resources/themes/default/styles/style.css
+++ b/ui/resources/themes/default/styles/style.css
@@ -413,6 +413,7 @@ form {
   height: 1.5em;
   position:relative;
   margin-bottom: -1.5em;
+  display: none;
 }
 
 #ajaxMessage *{
